[GH-301] Extract identifier metamodel setup into a reusable function.